@@ -219,6 +219,7 @@
     <module id="nautilus-rpm"/>
     <module id="nautilus-sendto"/>
     <module id="nautilus-vcs"/>
+    <module id="NetworkManager" branch="NETWORKMANAGER_0_6_0_RELEASE"/>
     <module id="ontv"/>
     <module id="ooo-build"/>
     <module id="optimystic"/>
@@ -397,7 +398,7 @@
       <module id="metacity"/>
       <module id="nautilus"/>
       <module id="nautilus-cd-burner"/>
-      <module id="NetworkManager"/>
+      <module id="network-manager-applet" branch="network-manager-applet-0-6"/>
       <module id="orca"/>
       <module id="seahorse"/>
       <module id="sound-juicer"/>
