@@ -1,5 +1,12 @@
 2007-03-02  Claude Paroz  <claude@2xlibre.net>
 
+	* gnome-modules.xml.in:
+	* releases.xml.in: Corrected references to NetworkManager and
+	network-manager-applet stable.
+	Fixes bug #413556.
+
+2007-03-02  Claude Paroz  <claude@2xlibre.net>
+
 	* releases.xml.in: gthumb refers now to trunk.
 
 2007-03-01  Claude Paroz  <claude@2xlibre.net>
